--- a/testutil/.settings/org.eclipse.jdt.core.prefs
+++ b/testutil/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Wed Mar 26 18:43:07 GMT 2014
+#Mon Mar 31 21:01:06 BST 2014
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.7
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
