Remove V72, was only used for investigation

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'V7','views', 'demo', 'testApp', 'orient', 'quartz','testUtil','testbench','V72'
+include 'V7','views', 'demo', 'testApp', 'orient', 'quartz','testUtil','testbench'
